<resources>
    <string name="app_name">实验室预约</string>
    <string name="client_name">实验室预约</string>
    <string name="operating_functions">操作功能</string>
    <string name="student_number">学号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="resetting">重置</string>
    <string name="select_result">查询结果</string>
    <string name="detailed_information">详细信息</string>

    <string name="andy">Andy Rubin \nAndroid的创造者</string>
    <string name="bill">Bill Joy \nJava创造者之一</string>
    <string name="edgar">Edgar F. Codd \n关系数据库之父</string>
    <string name="torvalds">Linus Torvalds \nLinux之父</string>
    <string name="turing">Turing Alan    \nIT的祖师爷</string>
    <string name="selectlose">你需要挂失的是:</string>
    <string name="information">      凡损坏实验室设备的同学，在上报成功后请速与实验室管理员联系，解决设备损坏事宜！</string>


</resources>