<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zhbit.client.RootActivity">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@drawable/title">

        <TextView
            android:text="@string/client_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/navigator">
        <TextView
            android:text="@string/login"
            android:layout_width="100dp"
            android:layout_height="wrap_content" 
            android:id="@+id/lose"
            android:textSize="18dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:background="@drawable/hilight"/>
        <TextView
            android:text="@string/operating_functions"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/yuyue"
            android:textSize="18dp"
            android:gravity="center"
            android:textColor="#ffffff"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/linearLayout03"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px">
            <TextView
                android:text="@string/student_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginLeft="80dp"/>
            <EditText
                android:id="@+id/yhm"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text=""
                android:textSize="16dp"
                android:minWidth="300px"/>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout04"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px">
            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginLeft="80dp"/>
            <EditText
                android:id="@+id/pwd"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16dp"
                android:minWidth="300px"
                android:password="true"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/button01"
                android:text="@string/login"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/button02"
                android:text="@string/resetting"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone" >
        </ListView>

    </LinearLayout>

    <!--<com.zhbit.client.GGView2-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="8dip"-->
        <!--android:layout_marginRight="8dip"-->
        <!--android:layout_marginLeft="8dip"-->
        <!--android:layout_marginBottom="8dip"-->
        <!--/>-->
  </LinearLayout>


