<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffcc">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@drawable/title"
        >
        <TextView
            android:text="@string/client_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:textSize="20dip"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center"
            >
        </TextView>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|right"
            >
            <ImageButton
                android:id="@+id/ImageButtonquery_details01"
                android:background="@drawable/next_button"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="15dp"
                >
            </ImageButton>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/navigator"
        >
        <TextView
            android:text="@string/select_result"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:textColor="#FFFFFF"
            android:gravity="center"

            />
        <TextView
            android:text="@string/detailed_information"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:background="@drawable/hilight"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffcc66"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            >
            <TextView
                android:text="ISBN"
                android:textSize="15dp"
                android:textColor="#000000"
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                />
            <TextView
                android:id="@+id/TextViewdetails01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#000000"
                ></TextView>
            <TextView
                android:text="本馆收藏"
                android:textSize="15dip"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ></TextView>
            <TextView
                android:textSize="14dp"
                android:id="@+id/TextViewdetails02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                ></TextView>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            >
            <TextView
                android:text="书名"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:textSize="15dp"
                android:textColor="#000000"
                ></TextView>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#000000"
                android:id="@+id/TextViewdetails03"
                android:paddingLeft="5dp"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            >
            <TextView
                android:text="作者"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:textSize="15dp"
                android:textColor="#000000"
                ></TextView>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#000000"
                android:id="@+id/TextViewdetails04"
                android:paddingLeft="5dp"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            >
            <TextView
                android:text="出版社"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:textSize="15dp"
                android:textColor="#000000"
                ></TextView>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#000000"
                android:id="@+id/TextViewdetails05"
                android:paddingLeft="5dp"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            >
            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="本书简介："
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="#000000"
                    ></TextView>
                <TextView
                    android:textSize="14dp"
                    android:textColor="#000000"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewdetails06"
                    ></TextView>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="7dp"
        android:layout_marginLeft="7dp"
        >
        <TextView
            android:text="书号"
            android:textSize="16dp"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:textColor="#000000">
        </TextView>
        <TextView
            android:text="是否借阅"
            android:textSize="16dp"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:textColor="#000000">
        </TextView>
        <TextView
            android:text="是否预约"
            android:textSize="16dp"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:textColor="#000000">
        </TextView>

    </LinearLayout>
    <GridView
        android:id="@+id/GridViewdetails01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:verticalSpacing="7dp"
        android:horizontalSpacing="7dp"
        android:stretchMode="columnWidth"

        ></GridView>
</LinearLayout>
